--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 
   <body>
     <!-- the entire body must be written by student -->
+	  <div class="container">
+		  <nav class="nav_bar">Nav</nav>
+		<div class="main_content">
+			<header class="header">Header</header>
+			<main class="content_section">
+				<section class="article">Article</section>
+                <aside class="aside">Aside</aside>
+			</main>
+			<footer class="footer">Footer</footer>
+		</div>
+	  </div>
+
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
