--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<div class="main_content">
 			<header class="header">Header</header>
 			<main class="content_section">
-				<section class="article">Article</section>
+				<article class="article">Article</article>
                 <aside class="aside">Aside</aside>
 			</main>
 			<footer class="footer">Footer</footer>
