--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 		  <nav class="nav_bar">Nav</nav>
 		<div class="main_content">
 			<header class="header">Header</header>
-			<main class="content_section">
+			<main class="content">
 				<article class="article">Article</article>
                 <aside class="aside">Aside</aside>
 			</main>
